<resources>
    <string name="app_name">Calculadora Simples</string>

    <string name="button_CE">CE</string>
    <string name="button_C">C</string>
    <string name="button_Back">Back</string>

    <string name="button_Divide">÷</string>
    <string name="button_Sum">+</string>
    <string name="button_Multiply">×</string>
    <string name="button_Subtract">−</string>
    <string name="button_Dot">.</string>
    <string name="button_Calculate">=</string>

    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
</resources>
